manifests/03-inventory-db-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-db
  namespace: orchestrator
spec:
  selector:
    app: inventory-db
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: inventory-db
  namespace: orchestrator
spec:
  serviceName: inventory-db
  replicas: 1
  selector:
    matchLabels:
      app: inventory-db
  template:
    metadata:
      labels:
        app: inventory-db
    spec:
      containers:
      - name: postgres
        image: k3d-registry.localhost:5000/inventory-db:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: inventory-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: inventory-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
